<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="button_search_text">Поиск</string>
    <string name="button_settings_text">Настройки</string>
    <string name="button_library_text">Медиатека</string>
    <string name="title_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_application">Пользовательское приложение</string>
    <string name="title_back">Назад</string>
    <string name="title_library" translatable="false">Экран медиатеки</string>
    <string name="title_search">Поиск</string>
    <string name="share_app_link" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_app_type" translatable="false">text/plain</string>
    <string name="share_app_message">Поделиться приложением</string>
    <string name="write_to_supp_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="write_to_supp_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_to_supp_mailto" translatable="false">mailto:</string>
    <string name="write_to_supp_email" translatable="false">babaylov-ayu@mail.ru</string>
    <string name="terms_of_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="button_update">Обновить</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="itunes_base_url" translatable="false">https://itunes.apple.com</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_the_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="audio_file_not_available">Аудиофайл недоступен</string>
    <string name="player_default_time" translatable="false">0:00</string>
    <string name="unknown" translatable="false">unknown</string>
    <string name="not_found" translatable="false">not found</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="featured_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="one_track">трек</string>
    <string name="more_that_one_track_1">трека</string>
    <string name="more_that_one_track_2">треков</string>
    <string name="complete_playlist">Завершить создание плейлиста?</string>
    <string name="lose_data">Все несохраненные данные будут потеряны</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="add_to_playlist">Добавить в плейлист</string>


    <!-- Склонения слова "Трек" -->
    <plurals name="plurals_track" translatable="false">
        <item quantity="zero">треков</item>
        <item quantity="one">трек</item>
        <item quantity="two">трека</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>

    <!-- Склонения слова "Трек" -->
    <plurals name="plurals_min" translatable="false">
        <item quantity="zero">минут</item>
        <item quantity="one">минута</item>
        <item quantity="two">минуты</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>
    <string name="playlist_is_empty">В плейлист еще не добавлен\nни один трек</string>
    <string name="del_track">Хотите удалить трек?</string>
    <string name="del_track_qestion">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="del">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit_inf">Редактировать информацию</string>
    <string name="del_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="yes_caps">ДА</string>
    <string name="no_caps">НЕТ</string>
    <string name="del_qestion">Хотите удалить плейлист «</string>

</resources>


