<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical"
    android:padding="@dimen/margin_on_the_edges">

    <RelativeLayout
        android:id="@+id/panel_heade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/height_panel_header">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yandex_sans_display_light"
            android:gravity="top"
            android:text="@string/title"
            android:textAppearance="@style/title" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_search"
        style="@style/button_style"
        android:fontFamily="@font/yandex_sans_display_light"
        android:text="@string/button_search_text"
        app:cornerRadius="@dimen/primary_corner_radius_for_button"
        app:icon="@drawable/search_light_mode"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/black"></Button>

    <Button
        android:id="@+id/button_library"
        style="@style/button_style"
        android:fontFamily="@font/yandex_sans_display_light"
        android:text="@string/button_library_text"
        app:cornerRadius="@dimen/primary_corner_radius_for_button"
        app:icon="@drawable/library_light_mode"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/black"></Button>

    <Button
        android:id="@+id/button_settings"
        style="@style/button_style"
        android:fontFamily="@font/yandex_sans_display_light"
        android:text="@string/button_settings_text"
        app:cornerRadius="@dimen/primary_corner_radius_for_button"
        app:icon="@drawable/settings_light_mode"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/black"></Button>


</LinearLayout>