<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_on_the_edges"
    style="@style/SettingsActivityBackground">

    <LinearLayout
        android:id="@+id/panel_heade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/height_panel_header"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="@dimen/button_back_size"
            android:layout_height="@dimen/button_back_size"
            android:layout_gravity="center"
            android:contentDescription="@string/title_back"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/button_back"
            style="@style/SettingsActivityTitle"/>


        <TextView
            android:id="@+id/title_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/title_settings"
            android:textAppearance="@style/Title"
            android:textSize="@dimen/primary_text_size"
            android:fontFamily="@font/ys_display_medium"
            style="@style/SettingsActivityTitle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/settings_element_height"
        android:layout_marginTop="@dimen/margin_top_24"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dark_theme"
            android:textSize="@dimen/primary_text_size_settings_button"
            android:fontFamily="@font/ys_display_regular"
            style="@style/SettingsActivityTextColor"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_theme_switch"
            android:layout_width="@dimen/button_switch_compat_width"
            android:layout_height="@dimen/button_switch_compat_height"
            android:layout_gravity="center"

            style="@style/ButtonSwitch"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sare_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/settings_element_height"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/share_app"
            android:textSize="@dimen/primary_text_size_settings_button"
            android:fontFamily="@font/ys_display_regular"
            app:drawableEndCompat="@drawable/share_light_mode"
            style="@style/SettingsActivityTextColor"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/write_to_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/settings_element_height"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/write_to_support"
            android:textSize="@dimen/primary_text_size_settings_button"
            android:fontFamily="@font/ys_display_regular"
            app:drawableEndCompat="@drawable/support_light_mode"
            style="@style/SettingsActivityTextColor"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/terms_of_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/settings_element_height"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_application"
            android:textSize="@dimen/primary_text_size_settings_button"
            android:fontFamily="@font/ys_display_regular"
            app:drawableEndCompat="@drawable/arrow_forward_light_mode"
            style="@style/SettingsActivityTextColor"/>


    </LinearLayout>

</LinearLayout>