<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsActivityBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.new_playlist.NewPlaylistActivity">


    <ImageView
        android:id="@+id/iv_button_back"
        style="@style/SettingsActivityTitle"
        android:layout_width="@dimen/button_back_size"
        android:layout_height="@dimen/button_back_size"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/padding4"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/button_back"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_panel_header"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="fill"
        android:text="@string/new_playlist"
        android:textSize="@dimen/primary_text_size_26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_button_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_album"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/padding24"
        android:layout_marginTop="@dimen/padding24"
        app:layout_constraintDimensionRatio="w, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <EditText
        android:id="@+id/et_name"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding16"
        android:layout_marginTop="@dimen/padding48"
        android:cursorVisible="true"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="@dimen/height_panel_header"
        android:paddingStart="@dimen/padding12"
        android:paddingEnd="@dimen/padding12"
        android:singleLine="true"
        android:textColor="@color/yp_black"
        android:textCursorDrawable="@drawable/my_cursor_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_album" />

    <EditText
        android:id="@+id/et_description"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding16"
        android:layout_marginTop="@dimen/padding16"
        android:cursorVisible="true"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="@dimen/height_panel_header"
        android:paddingStart="@dimen/padding12"
        android:paddingEnd="@dimen/padding12"
        android:singleLine="true"
        android:textColor="@color/yp_black"
        android:textCursorDrawable="@drawable/my_cursor_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />


</androidx.constraintlayout.widget.ConstraintLayout>